# GLS-Helper

./: README.md  c4-architecture.md  pyproject.toml  ruff
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/domain/model/: edge.py  node.py
src/domain/protocol/: graph_repository.py  netlist_parser.py  progress_observer.py  sdf_parser.py  verilog_parser.py
src/infra/parser/: sdf_stream_parser.py  verilog_stream_parser.py
src/infra/repository/: sqlite_graph_repository.py
src/interface/: cli.py
src/usecase/: import_gate.py  import_sdf.py  import_verilog.py  trace_path.py
test/: test_infra_real_content.py  test_infra_repository.py  test_infra_sdf_parser.py  test_interface_cli.py  test_issue_reproduction.py  test_performance.py  test_usecase_import_gate.py  test_usecase_import_sdf.py  test_usecase_import_verilog.py
test/input/infra/real_content/: CHIPTOP_Decoder_inst.sdf
test/input/real_content/: CHIPTOP_Decoder_inst_design.v
